feat: complete day tracking experience
